--- a/mods/moreores/locale/pl.txt
+++ b/mods/moreores/locale/pl.txt
@@ -2,14 +2,14 @@
 
 [moreores] loaded. = [moreores] załadowano.
 
-%s Ore = %Ruda
-%s Lump = %Bryłka
-%s Ingot = %Sztabka
-%s Block = %sBlok
-%s Pickaxe = %sKilof
-%s Shovel = %sŁopatka
-%s Axe = %sSiekiera
-%s Sword = %sMiecz
+%s Ore = %s Ruda
+%s Lump = %s Bryłka
+%s Ingot = %s Sztabka
+%s Block = %s Blok
+%s Pickaxe = %s Kilof
+%s Shovel = %s Łopatka
+%s Axe = %s Siekiera
+%s Sword = %s Miecz
 
 Copper = Miedź
 Tin = Cyna
