--- a/mods/moreblocks/locale/zh_CN.po
+++ b/mods/moreblocks/locale/zh_CN.po
@@ -1,8 +1,7 @@
-# Italian translation for More Blocks.
+# Template translation for More Blocks.
 # Copyright © 2011-2020 Hugo Locurcio and contributors
 # This file is distributed under the same license as the More Blocks package.
-# Emon, 2016.
-# CodeXP <codexp@gmx.net>, 2018.
+# IFRFSX <IFRFSX@protonmail.com>, 2020.
 msgid ""
 msgstr ""
 "Project-Id-Version: More Blocks\n"
@@ -11,280 +10,279 @@ msgstr ""
 "PO-Revision-Date: \n"
 "Last-Translator: CodeXP <codexp@gmx.net>\n"
 "Language-Team: \n"
-"Language: it\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: circular_saw.lua
 msgid "Circular Saw"
-msgstr "Sega circolare"
+msgstr "圆锯"
 
 #: circular_saw.lua
 msgid ""
 "Input\n"
 "material"
 msgstr ""
-"Materiale\n"
-"iniziale"
+"输入\n"
+"材料"
 
 #: circular_saw.lua
 msgid "Left-over"
-msgstr "Scarto"
+msgstr "剩余材料"
 
 #: circular_saw.lua
 msgid "Max"
-msgstr "Max."
+msgstr "最大值"
 
 #: circular_saw.lua
 msgid ""
 "Recycle\n"
 "output"
 msgstr ""
-"Ricicla\n"
-"finale"
+"回收\n"
+"输出物"
 
 #: circular_saw.lua
 msgid "Set"
-msgstr "Imp."
+msgstr "设置"
 
 #: circular_saw.lua
 msgid "owned by @1"
-msgstr ""
+msgstr "属于@1所有"
 
 #: circular_saw.lua
 msgid "Circular Saw is empty"
-msgstr "Sega circolare, vuota"
+msgstr "圆锯是空的"
 
 #: circular_saw.lua
 msgid "Circular Saw is working on @1"
-msgstr "Sega circolare, in funzione su @1"
+msgstr "圆锯正在加工@1"
 
 #: init.lua
 msgid "[moreblocks] loaded."
-msgstr "[moreblocks] caricato."
+msgstr "[moreblocks] 已加载"
 
 #: nodes.lua
 msgid "Deprecated"
-msgstr ""
+msgstr "弃用"
 
 #: nodes.lua
 msgid "All-faces Acacia Tree"
-msgstr ""
+msgstr "全切面相思树木方块"
 
 #: nodes.lua
 msgid "All-faces Aspen Tree"
-msgstr ""
+msgstr "全切面白杨树木方块"
 
 #: nodes.lua
 msgid "All-faces Jungle Tree"
-msgstr ""
+msgstr "全切面丛林树木方块"
 
 #: nodes.lua
 msgid "All-faces Pine Tree"
-msgstr ""
+msgstr "全切面松树木方块"
 
 #: nodes.lua
 msgid "All-faces Tree"
-msgstr "Albero su ogni lato"
+msgstr "全切面树木方块"
 
 #: nodes.lua
 msgid "Cactus Brick"
-msgstr "Mattoni di cactus"
+msgstr "仙人掌砖"
 
 #: nodes.lua
 msgid "Cactus Checker"
-msgstr "Scacchiera in cactus"
+msgstr "仙人掌棋盘方块"
 
 #: nodes.lua
 msgid "Centered Wooden Tile"
-msgstr "Mattonella in legno centrata"
+msgstr "居中的木瓦"
 
 #: nodes.lua
 msgid "Checker Stone Tile"
-msgstr ""
+msgstr "棋盘石瓦"
 
 #: nodes.lua
 msgid "Circle Stone Bricks"
-msgstr "Mattoni concentrici in pietra"
+msgstr "圆石砖"
 
 #: nodes.lua
 msgid "Clean Glass"
-msgstr "Vetro pulito"
+msgstr "干净的玻璃"
 
 #: nodes.lua
 msgid "Coal Checker"
-msgstr "Scacchiera in carbone"
+msgstr "棋盘煤块"
 
 #: nodes.lua
 msgid "Coal Glass"
-msgstr "Vetro e carbone"
+msgstr "煤玻璃"
 
 #: nodes.lua
 msgid "Coal Stone"
-msgstr "Pietra in carbone"
+msgstr "煤炭石"
 
 #: nodes.lua
 msgid "Coal Stone Bricks"
-msgstr "Mattoni di pietra in carbone"
+msgstr "煤炭石砖"
 
 #: nodes.lua
 msgid "Compressed Cobblestone"
-msgstr ""
-
-#: nodes.lua
-msgid "Compressed Desert Cobblestone"
-msgstr ""
+msgstr "压缩圆石"
 
 #: nodes.lua
 msgid "Compressed Dirt"
-msgstr ""
+msgstr "压缩土"
 
 #: nodes.lua
 msgid "Copper Patina Block"
-msgstr ""
+msgstr "铜绿方块"
 
 #: nodes.lua
 msgid "Empty Shelf"
-msgstr "Scaffale Vuoto"
+msgstr "空书架"
 
 #: nodes.lua
 msgid "Full Wooden Tile"
-msgstr "Mattonella in legno pieno"
+msgstr "全木瓦"
 
 #: nodes.lua
 msgid "Glow Glass"
-msgstr "Vetro luminoso"
+msgstr "发光玻璃"
 
 #: nodes.lua
 msgid "Iron Checker"
-msgstr "Scacchiera in ferro"
+msgstr "棋盘铁方块"
 
 #: nodes.lua
 msgid "Iron Glass"
-msgstr "Vetro e ferro"
+msgstr "铁玻璃"
 
 #: nodes.lua
 msgid "Iron Stone"
-msgstr "Pietra in ferro"
+msgstr "铁石"
 
 #: nodes.lua
 msgid "Iron Stone Bricks"
-msgstr "Mattoni di pietra in ferro"
+msgstr "铁石砖"
 
 #: nodes.lua
 msgid "Plankstone"
-msgstr "Pietra e legno"
+msgstr "板石"
 
 #: nodes.lua
 msgid "Rope"
-msgstr "Corda"
+msgstr "绳子"
 
 #: nodes.lua
 msgid "Split Stone Tile"
-msgstr "Mattonella in pietra divisa"
+msgstr "裂石砖"
 
 #: nodes.lua
 msgid "Stone Bricks"
-msgstr ""
+msgstr "石砖"
 
 #: nodes.lua
 msgid "Stone Tile"
-msgstr "Mattonella in pietra"
+msgstr "石瓦"
 
 #: nodes.lua
 msgid "Super Glow Glass"
-msgstr "Super vetro luminoso"
+msgstr "超级发光玻璃"
 
 #: nodes.lua
 msgid "Sweeper"
-msgstr "Spazzola"
+msgstr "清扫器"
 
 #: nodes.lua
 msgid "Tar"
-msgstr ""
+msgstr "焦油"
 
 #: nodes.lua
 msgid "Trap Desert Stone"
-msgstr ""
+msgstr "陷阱沙漠石"
 
 #: nodes.lua
 msgid "Trap Glass"
-msgstr "Vetro trappola"
+msgstr "陷阱玻璃"
 
 #: nodes.lua
 msgid "Trap Glow Glass"
-msgstr "Vetro luminoso trappola"
+msgstr "陷阱发光玻璃"
 
 #: nodes.lua
 msgid "Trap Obsidian"
-msgstr ""
+msgstr "陷阱黑耀石"
 
 #: nodes.lua
 msgid "Trap Obsidian Glass"
-msgstr ""
+msgstr "陷阱黑耀石玻璃"
 
 #: nodes.lua
 msgid "Trap Sandstone"
-msgstr ""
+msgstr "陷阱沙石"
 
 #: nodes.lua
 msgid "Trap Stone"
-msgstr "Pietra trappola"
+msgstr "陷阱石"
 
 #: nodes.lua
 msgid "Trap Super Glow Glass"
-msgstr "Super vetro luminoso trappola"
+msgstr "陷阱超级发光玻璃"
 
 #: nodes.lua
 msgid "Wooden Tile"
-msgstr "Mattonella in legno"
+msgstr "木瓦"
 
 #: nodes.lua
 msgid "Offset Wooden Tile"
-msgstr ""
+msgstr "胶合木瓦"
 
+# @deprecated
 #: nodes.lua
 msgid "Downwards Wooden Tile"
-msgstr ""
+msgstr "向下的木瓦"
 
+# @deprecated
 #: nodes.lua
 msgid "Leftwards Wooden Tile"
-msgstr ""
+msgstr "向左的木瓦"
 
+# @deprecated
 #: nodes.lua
 msgid "Rightwards Wooden Tile"
-msgstr ""
+msgstr "向右的木瓦"
 
 #: ownership.lua
 msgid "Sorry, @1 owns that spot."
-msgstr "Spiacente, quel punto è di proprietà di @1"
+msgstr "抱歉，那个位置是@1的。"
 
 #: ownership.lua
 msgid "someone"
-msgstr "qualcuno"
+msgstr "某人"
 
 #: stairsplus/common.lua
 #, lua-format
 msgid "%s Microblock"
-msgstr "Microblocco %s"
+msgstr "%s 小方块"
 
 #: stairsplus/common.lua stairsplus/slabs.lua
 #, lua-format
 msgid "%s Slab"
-msgstr "Lastra - %s"
+msgstr "%s 台阶"
 
 #: stairsplus/common.lua
 #, lua-format
 msgid "%s Slope"
-msgstr ""
+msgstr "%s 斜坡"
 
 #: stairsplus/common.lua
 #, lua-format
 msgid "%s Panel"
-msgstr "Pannello - %s"
+msgstr "%s 嵌板"
 
 #: stairsplus/common.lua
 #, lua-format
 msgid "%s Stairs"
-msgstr "Scale - %s"
+msgstr "%s 楼梯"
