git subrepo pull (merge) mods/moretrees
subrepo:
  subdir:   "mods/moretrees"
  merged:   "8c0a83dac"
upstream:
  origin:   "https://gitlab.com/VanessaE/moretrees.git"
  branch:   "master"
  commit:   "8c0a83dac"
git-subrepo:
  version:  "0.4.1"
  origin:   "https://github.com/ingydotnet/git-subrepo"
  commit:   "a04d8c2"

--- a/mods/moretrees/locale/template.txt
+++ b/mods/moretrees/locale/template.txt
@@ -1,73 +1,210 @@
-# Template
+# textdomain: moretrees
+
+
+### cocos_palm.lua ###
+
+Coconut=
+Coconut Flower=
 
 ### crafts.lua ###
-Coconut Milk = 
-Raw Coconut = 
-Acorn Muffin batter = 
-Acorn Muffin = 
-Roasted Spruce Cone Nuts = 
-Roasted Pine Cone Nuts = 
-Roasted Fir Cone Nuts = 
+
+Acorn Muffin=
+Acorn Muffin batter=
+Coconut Milk=
+Date=
+Date & nut snack=
+Date-nut cake=
+Date-nut cake batter=
+Date-nut energy bar=
+Raw Coconut=
+Roasted Cedar Cone Nuts=
+Roasted Fir Cone Nuts=
+Roasted Spruce Cone Nuts=
+
+### date_palm.lua ###
+
+Date Flowers=
+Date Stem=
+Dates=
 
 ### node_defs.lua ###
-Beech Tree Trunk = 
-Apple Tree Trunk = 
-Oak Tree Trunk = 
-Giant Sequoia Trunk = 
-Birch Tree Trunk = 
-Palm Tree Trunk = 
-Spruce Tree Trunk = 
-Pine Tree Trunk = 
-Willow Tree Trunk = 
-Rubber Tree Trunk = 
-Jungle Tree Trunk = 
-Douglas Fir Trunk = 
-Beech Tree Planks = 
-Apple Tree Planks = 
-Oak Tree Planks = 
-Giant Sequoia Planks = 
-Birch Tree Planks = 
-Palm Tree Planks = 
-Spruce Tree Planks = 
-Pine Tree Planks = 
-Willow Tree Planks = 
-Rubber Tree Planks = 
-Jungle Tree Planks = 
-Douglas Fir Planks = 
-Beech Tree Sapling = 
-Apple Tree Sapling = 
-Oak Tree Sapling = 
-Giant Sequoia Sapling = 
-Birch Tree Sapling = 
-Palm Tree Sapling = 
-Spruce Tree Sapling = 
-Pine Tree Sapling = 
-Willow Tree Sapling = 
-Rubber Tree Sapling = 
-Jungle Tree Sapling = 
-Douglas Fir Sapling = 
-Beech Tree Leaves = 
-Apple Tree Leaves = 
-Oak Tree Leaves = 
-Giant Sequoia Leaves = 
-Birch Tree Leaves = 
-Palm Tree Leaves = 
-Spruce Tree Leaves = 
-Pine Tree Leaves = 
-Willow Tree Leaves = 
-Rubber Tree Leaves = 
-Jungle Tree Leaves = 
-Douglas Fir Leaves = 
 
-Acorn = 
-Coconut = 
-Spruce Cone = 
-Pine Cone = 
-Fir Cone = 
-Jungle Sapling = 
-Jungle Tree Leaves (Yellow) = 
-Jungle Tree Leaves (Red) = 
-Douglas Fir Leaves (Bright) = 
-Rubber Tree Trunk (Empty) = 
-
-[Moretrees] Loaded (2013-02-11) = 
+@1 (fast growth)=
+Acorn=
+Apple Tree=
+Apple Tree Fence=
+Apple Tree Fence Gate=
+Apple Tree Fence Rail=
+Apple Tree Leaves=
+Apple Tree Planks=
+Apple Tree Planks Slab=
+Apple Tree Planks Stair=
+Apple Tree Sapling=
+Apple Tree Trunk=
+Apple Tree Trunk Slab=
+Apple Tree Trunk Stair=
+Beech Tree=
+Beech Tree Fence=
+Beech Tree Fence Gate=
+Beech Tree Fence Rail=
+Beech Tree Leaves=
+Beech Tree Planks=
+Beech Tree Planks Slab=
+Beech Tree Planks Stair=
+Beech Tree Sapling=
+Beech Tree Trunk=
+Beech Tree Trunk Slab=
+Beech Tree Trunk Stair=
+Birch Tree=
+Birch Tree Fence=
+Birch Tree Fence Gate=
+Birch Tree Fence Rail=
+Birch Tree Leaves=
+Birch Tree Planks=
+Birch Tree Planks Slab=
+Birch Tree Planks Stair=
+Birch Tree Sapling=
+Birch Tree Trunk=
+Birch Tree Trunk Slab=
+Birch Tree Trunk Stair=
+Cedar Cone=
+Cedar Tree=
+Cedar Tree Fence=
+Cedar Tree Fence Gate=
+Cedar Tree Fence Rail=
+Cedar Tree Leaves=
+Cedar Tree Planks=
+Cedar Tree Planks Slab=
+Cedar Tree Planks Stair=
+Cedar Tree Sapling=
+Cedar Tree Trunk=
+Cedar Tree Trunk Slab=
+Cedar Tree Trunk Stair=
+Date Palm Tree=
+Date Palm Tree Fence=
+Date Palm Tree Fence Gate=
+Date Palm Tree Fence Rail=
+Date Palm Tree Leaves=
+Date Palm Tree Planks=
+Date Palm Tree Planks Slab=
+Date Palm Tree Planks Stair=
+Date Palm Tree Sapling=
+Date Palm Tree Trunk=
+Date Palm Tree Trunk Slab=
+Date Palm Tree Trunk Stair=
+Douglas Fir=
+Douglas Fir Fence=
+Douglas Fir Fence Gate=
+Douglas Fir Fence Rail=
+Douglas Fir Leaves=
+Douglas Fir Leaves (Bright)=
+Douglas Fir Planks=
+Douglas Fir Planks Slab=
+Douglas Fir Planks Stair=
+Douglas Fir Sapling=
+Douglas Fir Trunk=
+Douglas Fir Trunk Slab=
+Douglas Fir Trunk Stair=
+Fir Cone=
+Giant Sequoia=
+Giant Sequoia Fence=
+Giant Sequoia Fence Gate=
+Giant Sequoia Fence Rail=
+Giant Sequoia Leaves=
+Giant Sequoia Planks=
+Giant Sequoia Planks Slab=
+Giant Sequoia Planks Stair=
+Giant Sequoia Sapling=
+Giant Sequoia Trunk=
+Giant Sequoia Trunk Slab=
+Giant Sequoia Trunk Stair=
+Jungle Tree=
+Jungle Tree Fence=
+Jungle Tree Fence Gate=
+Jungle Tree Fence Rail=
+Jungle Tree Leaves=
+Jungle Tree Leaves (@1)=
+Jungle Tree Planks=
+Jungle Tree Planks Slab=
+Jungle Tree Planks Stair=
+Jungle Tree Sapling=
+Jungle Tree Trunk=
+Jungle Tree Trunk Slab=
+Jungle Tree Trunk Stair=
+Oak Tree=
+Oak Tree Fence=
+Oak Tree Fence Gate=
+Oak Tree Fence Rail=
+Oak Tree Leaves=
+Oak Tree Planks=
+Oak Tree Planks Slab=
+Oak Tree Planks Stair=
+Oak Tree Sapling=
+Oak Tree Trunk=
+Oak Tree Trunk Slab=
+Oak Tree Trunk Stair=
+Palm Tree=
+Palm Tree Fence=
+Palm Tree Fence Gate=
+Palm Tree Fence Rail=
+Palm Tree Leaves=
+Palm Tree Planks=
+Palm Tree Planks Slab=
+Palm Tree Planks Stair=
+Palm Tree Sapling=
+Palm Tree Trunk=
+Palm Tree Trunk Slab=
+Palm Tree Trunk Stair=
+Poplar Tree=
+Poplar Tree Fence=
+Poplar Tree Fence Gate=
+Poplar Tree Fence Rail=
+Poplar Tree Leaves=
+Poplar Tree Planks=
+Poplar Tree Planks Slab=
+Poplar Tree Planks Stair=
+Poplar Tree Sapling=
+Poplar Tree Trunk=
+Poplar Tree Trunk Slab=
+Poplar Tree Trunk Stair=
+Red=
+Rubber Tree=
+Rubber Tree Fence=
+Rubber Tree Fence Gate=
+Rubber Tree Fence Rail=
+Rubber Tree Leaves=
+Rubber Tree Planks=
+Rubber Tree Planks Slab=
+Rubber Tree Planks Stair=
+Rubber Tree Sapling=
+Rubber Tree Trunk=
+Rubber Tree Trunk (Empty)=
+Rubber Tree Trunk Slab=
+Rubber Tree Trunk Stair=
+Small poplar Tree Sapling=
+Spruce Cone=
+Spruce Tree=
+Spruce Tree Fence=
+Spruce Tree Fence Gate=
+Spruce Tree Fence Rail=
+Spruce Tree Leaves=
+Spruce Tree Planks=
+Spruce Tree Planks Slab=
+Spruce Tree Planks Stair=
+Spruce Tree Sapling=
+Spruce Tree Trunk=
+Spruce Tree Trunk Slab=
+Spruce Tree Trunk Stair=
+Willow Tree=
+Willow Tree Fence=
+Willow Tree Fence Gate=
+Willow Tree Fence Rail=
+Willow Tree Leaves=
+Willow Tree Planks=
+Willow Tree Planks Slab=
+Willow Tree Planks Stair=
+Willow Tree Sapling=
+Willow Tree Trunk=
+Willow Tree Trunk Slab=
+Willow Tree Trunk Stair=
+Yellow=
